Hotels list - Make sort dropdown fit the container width && Select a promo code then continue with the booking - the text in the blue overlay is not centre aligned correctly

--- a/src/styles/components/notification-bar.less
+++ b/src/styles/components/notification-bar.less
@@ -24,7 +24,7 @@ notification-bar {
       width: 100%;
       text-align: center;
       padding: @baseline * 1.5;
-
+      box-sizing: border-box;
     }
 
     &.active {
